skill_validator/tests/snapshots/integration_test__name_invalid_format.snap
---
source: tests/integration_test.rs
expression: snapshot_report(&report)
---
error[skill_name_invalid_format]: skills/test/bad-name/SKILL.md:2: skills/test/bad-name/SKILL.md has invalid name 'My Skill!'

Ran 1 lints: 1 errors, 0 warnings
