skill_validator/tests/snapshots/integration_test__name_mismatch.snap
---
source: tests/integration_test.rs
assertion_line: 111
expression: snapshot_report(&report)
---
error[skill_name_mismatch]: skills/test/name-mismatch/SKILL.md:1: skills/test/name-mismatch/SKILL.md frontmatter name 'wrong-name' does not match expected 'test-name-mismatch'

Ran 1 lints: 1 errors, 0 warnings
