skill_validator/tests/snapshots/integration_test__name_missing_group_prefix.snap
---
source: tests/integration_test.rs
expression: snapshot_report(&report)
---
error[skill_name_missing_group_prefix]: skills/test/name-mismatch/SKILL.md:2: skills/test/name-mismatch/SKILL.md name 'wrong-name' does not start with group 'test'

Ran 1 lints: 1 errors, 0 warnings
