skill_validator/tests/snapshots/integration_test__no_references_promoted.snap
---
source: tests/integration_test.rs
assertion_line: 245
expression: snapshot_report(&report)
---
warning[skill_has_no_references]: skills/test/no-references/SKILL.md:1: skills/test/no-references/SKILL.md has no references/ directory

Ran 1 lints: 0 errors, 1 warnings
