skill_validator/tests/snapshots/integration_test__valid_skill.snap
---
source: tests/integration_test.rs
assertion_line: 53
expression: snapshot_report(&report)
---

Ran 15 lints: 0 errors, 0 warnings
